...
        android:orderInCategory="100" app:showAsAction="never" />


    <item
        android:id="@+id/order_items"
        android:icon="@drawable/ic_baseline_reorder_white_24"
        android:title="cambiar vista"
        android:actionViewClass="android.widget.ImageButton"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/tipe_view"
        android:icon="@drawable/ic_baseline_apps_white_24"
        android:title="cambiar vista"
        android:actionViewClass="android.widget.ImageButton"
        app:showAsAction="always"
        />
    <item android:id="@+id/nuevo"
          android:icon="@drawable/zic_add_circle_outline_white_24dp"
          android:title="Agregar Nuevo"
          android:actionViewClass="android.widget.ImageButton"
          app:showAsAction="always"/>
    <item android:id="@+id/bajarFotos"
        android:icon="@drawable/ic_cloud_download_black_24dp"
        android:title="Bajar Foto"
        android:iconTint="@color/White"
...

    <item android:id="@+id/vincular"
          android:icon="@drawable/ic_queue"
          android:title="Vincular"
          app:showAsAction="always"/>
    <item
        android:id="@+id/action_search"
        android:title="Search"
        android:icon="@drawable/ic_search"
        android:iconifiedByDefault="true"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />


...
