...
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/horizontalScrollView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/constraintPictos"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintVertical_weight="3">

...
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:rotationY="180"
        app:layout_constraintBottom_toTopOf="@id/containerBottomMasPictos"
        app:layout_constraintEnd_toStartOf="@id/constraintRightButtons"
        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView2"
        app:layout_constraintStart_toEndOf="@id/constraintLeftButtons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_weight="7"
        app:layout_constraintHorizontal_weight="90"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
...
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="More pictograms"
            android:scaleType="fitCenter"
            android:layout_margin="@dimen/small_margin"
            android:src="@drawable/ic_videogame_asset_black_24dp"
            android:tint="@color/White"
            app:layout_constraintBottom_toTopOf="@id/btnTodosLosPictos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnTodosLosPictos"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/small_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Here you find the gallery with all the pictograms"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_photo_library_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/action_reiniciar" />
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/containerBottomMasPictos">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnTalk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:elevation="20dp"
        android:src="@drawable/icono_ottaa"
        android:tint="@color/White"
...
