...
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FondoApp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/NaranjaOTTAA"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        android:titleTextAppearance="@color/White"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>


    <com.stonefacesoft.pictogramslibrary.view.PictoView
        android:id="@+id/ElPicto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:contentDescription="Picto"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toStartOf="@id/constraintEdicion"
        custom:layout_constraintHorizontal_weight="42"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@id/toolbar">

...
                    android:gravity="bottom"
                    android:text="@string/str_fiztgerald_key"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintColorCode"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="9">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        custom:layout_constraintCircle="@id/PlaceHolder"
                        custom:layout_constraintCircleAngle="0"
                        custom:layout_constraintCircleRadius="@dimen/big_fat_margin">

                        <ImageButton
                            android:id="@+id/Verde"
                            android:layout_width="@dimen/button_radius"
...
